welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:5: error: not found: value faire
		{faire Jardin();
                 ^FlowerCase:8: error: not found: value faire
     faire Jardin()
     ^